--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
           <scope>runtime</scope>
           <optional>true</optional>
       </dependency>
+
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.9.0</version>
+      </dependency>
               
     </dependencies>
 
