--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.devtools.livereload.enabled=true
 server.port = 8080
 
 spring.devtools.restart.additional-paths = ./src/main/java/com/example/environment
+spring.config.import=./src/main/java/com/example/environment/infrastructure/utils
 
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
 # spring.datasource.url=jdbc:mysql://localhost:3306/learn_integrator_crud 
