--- a/pom.xml
+++ b/pom.xml
@@ -71,14 +71,8 @@
 
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.6.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>bson</artifactId>
-            <version>4.6.0</version>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.0.4</version>
         </dependency>
 
     </dependencies>
